--- a/docs/docs/classic-ml/tracking/quickstart/index.mdx
+++ b/docs/docs/classic-ml/tracking/quickstart/index.mdx
@@ -5,6 +5,7 @@ sidebar_position: 2
 import { CardGroup, PageCard } from "@site/src/components/Card";
 import Link from "@docusaurus/Link";
 import { NotebookDownloadButton } from "@site/src/components/NotebookDownloadButton";
+import { Table } from "@site/src/components/Table";
 
 # MLflow Tracking Quickstart
 
@@ -226,7 +227,7 @@ result[:4]
 
 The output of this code will look something like this:
 
-<table>
+<Table>
   <thead>
     <tr>
       <th>sepal length (cm)</th>
@@ -271,7 +272,7 @@ The output of this code will look something like this:
       <td>1</td>
     </tr>
   </tbody>
-</table>
+</Table>
 
 ## Step 6 - View the Run in the MLflow UI
 
