--- a/docs/docs/classic-ml/model-registry/tutorial.mdx
+++ b/docs/docs/classic-ml/model-registry/tutorial.mdx
@@ -14,7 +14,7 @@ Explore the full functionality of the Model Registry in this tutorial — from r
 
 Throughout this tutorial we will leverage a local tracking server and model registry for simplicity.
 However, for production use cases we recommend using a
-[remote tracking server](../tracking/tutorials/remote-server.html).
+[remote tracking server](/ml/tracking/tutorials/remote-server).
 
 ### Step 0: Install Dependencies
 
@@ -35,7 +35,7 @@ registering a given model via one of the below commands:
 
 MLflow has lots of model flavors. In the below example, we'll leverage scikit-learn's
 RandomForestRegressor to demonstrate the simplest way to register a model, but note that you
-can leverage any [supported model flavor](/model#models_built-in-model-flavors).
+can leverage any [supported model flavor](/ml/model#models_built-in-model-flavors).
 In the code snippet below, we start an mlflow run and train a random forest model. We then log some
 relevant hyper-parameters, the model mean-squared-error (MSE), and finally log and register the
 model itself.
@@ -86,7 +86,7 @@ Before moving on, let's highlight some important implementation notes.
 - To register a model, you can leverage the `registered_model_name` parameter in the <APILink fn="mlflow.sklearn.log_model" />
   or call <APILink fn="mlflow.register_model" /> after logging the model. Generally, we suggest the former because it's more
   concise.
-- [Model Signatures](/model/signatures)
+- [Model Signatures](/ml/model/signatures)
   provide validation for our model inputs and outputs. The `input_example` in `log_model()`
   automatically infers and logs a signature. Again, we suggest using this implementation because
   it's concise.
@@ -146,7 +146,7 @@ The tracking server is organized by _Experiment ID_ and _Run ID_ and is responsi
 experiment artifacts, parameters, and metrics. The model registry, on the other hand, only stores
 metadata with pointers to our tracking server.
 
-As you can see, flavors that support [autologging](/tracking/autolog) provide lots of additional
+As you can see, flavors that support [autologging](/ml/tracking/autolog) provide lots of additional
 information out-of-the-box. Also note that even if we don't have autologging for our model of
 interest, we can easily store this information with explicit logging calls.
 
@@ -188,7 +188,7 @@ First, let's leave the experiment tracking tab and visit the model registry.
 </div>
 
 Next, let's add tags and a model version alias to
-[facilitate model deployment](/model-registry/#new-model-deployment-tools).
+[facilitate model deployment](/ml/model-registry/workflow/#deploy-and-organize-models-with-aliases-and-tags).
 You can add or edit tags and aliases by clicking on the corresponding `Add` link or pencil icon in
 the model version table. Let's...
 
